--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <title>Mixr - Find your new favorite drink</title>
 </head>
 <body>
-    
+    <header class="app-title">MIXR</header>
+    <aside class="flex-ctr">SIDE BAR</aside>
+    <main class="flex-ctr">MAIN CONTENT</main>
+    <footer class="flex-footer">FOOTER</footer>
+
 </body>
 </html>
