further progress on the APIn

--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
 <body>
     <header class="app-title">MIXR</header>
     <aside class="flex-ctr">SIDE BAR</aside>
-    <main class="flex-ctr">MAIN CONTENT</main>
-    <footer class="flex-footer">FOOTER</footer>
+    <main> 
+        <h2>Cocktail Name</h2>
+        <p id="cocktailName"></p>
+        <h2>Ingredients</h2>
+        <p id="ingredient"></p>
+        <button class="getCocktailbtn">Get Cocktail</button>
+    </main>
+    <footer class="flex-footer">FOOTER
+    </footer>
 
 </body>
 </html>
