--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link
-			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-			integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-			crossorigin="anonymous"
-		/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+        integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bubbler+One&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
     <title>Mixr - Find your new favorite drink</title>
 </head>
+
 <body>
     <header class="app-title">MIXR</header>
-    <aside class="flex-ctr">SIDE BAR</aside>
-    <main> 
-        <h2>Cocktail Name</h2>
+    <main>
+        <h2 class="subHead">Cocktail Name</h2>
         <p id="cocktailName"></p>
-        <h2>Ingredients</h2>
+        <h2 class="subHead">Ingredient</h2>
         <p id="ingredient"></p>
+        <!-- <h2>Ingredients</h2> -->
+        <!-- <p id="ingredients"></p> -->
+        <h2 class="subHead">Instructions</h2>
+        <p id="instructors"></p>
         <button class="getCocktailbtn">Get Cocktail</button>
     </main>
-    <footer class="flex-footer">FOOTER
+    <footer class="flex-footer">
+        
     </footer>
 
 </body>
+
 </html>
